--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -108,7 +108,7 @@ flutter:
   generate: true
   uses-material-design: true
   assets:
-    - .env
+    - dotenv
     - assets/auth_icons/
   # fonts:
   #   - family: NotoColorEmoji
