--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   google_sign_in: ^6.2.1
   local_auth: ^2.2.0
   translator: ^1.0.0
+  telegram_web_app: ^0.3.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3 # To generate icons - "flutter pub run flutter_launcher_icons"
