--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   form_field_validator: ^1.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   modal_bottom_sheet: ^3.0.0-pre
   package_info_plus: ^8.0.0
   path_provider: ^2.0.12
@@ -47,21 +47,21 @@ dependencies:
   share_plus: ^10.0.0
   supabase_flutter: ^2.0.1
   #syncfusion_flutter_charts: ^26.1.39
-  syncfusion_flutter_charts:
-    git:
-      url: https://github.com/iktakahiro/flutter-widgets.git
-      ref: support-flutter-3.24.0
-      path: packages/syncfusion_flutter_charts
-  syncfusion_flutter_core:
-    git:
-      url: https://github.com/iktakahiro/flutter-widgets.git
-      ref: support-flutter-3.24.0
-      path: packages/syncfusion_flutter_core
-  syncfusion_localizations:
-    git:
-      url: https://github.com/iktakahiro/flutter-widgets.git
-      ref: support-flutter-3.24.0
-      path: packages/syncfusion_localizations
+  syncfusion_flutter_charts: ^29.2.5
+    # git:
+    #   url: https://github.com/iktakahiro/flutter-widgets.git
+    #   ref: support-flutter-3.24.0
+    #   path: packages/syncfusion_flutter_charts
+  # syncfusion_flutter_core:
+    # git:
+    #   url: https://github.com/iktakahiro/flutter-widgets.git
+    #   ref: support-flutter-3.24.0
+    #   path: packages/syncfusion_flutter_core
+  # syncfusion_localizations:
+    # git:
+    #   url: https://github.com/iktakahiro/flutter-widgets.git
+    #   ref: support-flutter-3.24.0
+    #   path: packages/syncfusion_localizations
   url_launcher: ^6.1.9
   uuid: ^4.2.1
   webview_flutter: ^4.1.0
@@ -78,7 +78,7 @@ dependencies:
   haptic_feedback: ^0.5.1+1
   provider: ^6.1.2
   collection: ^1.18.0
-  google_sign_in: ^6.2.1
+  # google_sign_in: ^6.3.0
   local_auth: ^2.2.0
   translator: ^1.0.0
   telegram_web_app: ^0.3.3
