--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   rxdart: ^0.28.0
   scrollable_positioned_list: ^0.3.5
   settings_ui: ^2.0.2
+  shake: ^2.2.0
   share_plus: ^10.0.0
   supabase_flutter: ^2.0.1
   syncfusion_flutter_charts: ^30.1.41
@@ -84,6 +85,9 @@ dev_dependencies:
   intl_utils: ^2.8.2
   # mockito: ^5.0.0
   benchmarking: ^0.6.1
+
+dependency_overrides:
+  sensors_plus_platform_interface: '1.1.3'
 
 flutter_icons:
   image_path: "assets/app_icons/app_icon_4.png"
