--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   streaming_shared_preferences: ^2.0.0
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
+  full_swipe_back_gesture: ^0.1.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3 # To generate icons - "flutter pub run flutter_launcher_icons"
