--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
   full_swipe_back_gesture: ^0.1.0
+  steganograph: ^2.0.0
+  gallery_saver_plus: ^3.2.9
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3 # To generate icons - "flutter pub run flutter_launcher_icons"
@@ -101,3 +103,4 @@ flutter:
   assets:
     - dotenv
     - assets/auth_icons/
+    - assets/steganograph_image/
