--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Like TODO-List but keklist
 
 publish_to: "none"
 
-version: 3.8.0+75
+version: 4.0.0+75
 
 environment:
   sdk: ">=3.5.0"
@@ -12,7 +12,7 @@ dependencies:
   adaptive_dialog: ^2.0.0
   bloc: ^9.0.0
   blur: ^4.0.0
-  calendar_date_picker2: ^1.0.2
+  calendar_date_picker2: ^2.0.1
   cross_file: ^0.3.3+4
   csv: ^6.0.0
   cupertino_icons: ^1.0.5
@@ -37,20 +37,20 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.20.2
   modal_bottom_sheet: ^3.0.0-pre
-  package_info_plus: ^8.0.0
+  package_info_plus: ^9.0.0
   path_provider: ^2.0.12
   rxdart: ^0.28.0
   scrollable_positioned_list: ^0.3.5
   settings_ui: ^2.0.2
   share_plus: ^12.0.0
-  syncfusion_flutter_charts: ^30.1.41
+  syncfusion_flutter_charts: ^31.1.22
   url_launcher: ^6.1.9
   uuid: ^4.2.1
   webview_flutter: ^4.1.0
   gap: ^3.0.1
   #home_widget: ^0.6.0
   #workmanager: ^0.5.2
-  flutter_dotenv: ^5.1.0
+  flutter_dotenv: ^6.0.0
   flutter_staggered_grid_view: ^0.7.0
   crypto: ^3.0.3
   dart_openai: ^5.1.0
@@ -74,7 +74,7 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.4 # To generate icons - "flutter pub run flutter_launcher_icons"
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.0
@@ -84,7 +84,6 @@ dev_dependencies:
   benchmarking: ^0.6.1
 
 flutter_icons:
-  image_path: "assets/app_icons/app_icon_5.png"
   # iOS
   ios: true
   remove_alpha_ios: true
@@ -99,5 +98,5 @@ flutter:
   uses-material-design: true
   assets:
     - dotenv
-    - assets/auth_icons/
-    - assets/steganograph_image/
+    # - assets/auth_icons/
+    # - assets/steganograph_image/
