--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -64,5 +64,7 @@
 	<false/>
 	<key>NSFaceIDUsageDescription</key>
 	<string>For showing/hiding sensetive data for other users by current user</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>keklist needs access to photo library to import your backups from files</string>
 </dict>
 </plist>
