--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   # steganograph: ^2.0.0
   image_picker: ^1.2.0
   logarte: ^1.4.0
+  purchases_flutter: ^9.8.0
+  purchases_ui_flutter: ^9.8.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.4 # To generate icons - "flutter pub run flutter_launcher_icons"
