--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   modal_bottom_sheet: ^3.0.0-pre
   package_info_plus: ^9.0.0
   path_provider: ^2.0.12
+  just_audio: ^0.9.40
   rxdart: ^0.28.0
   scrollable_positioned_list: ^0.3.5
   settings_ui: ^2.0.2
