--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   purchases_flutter: ^9.8.0
   purchases_ui_flutter: ^9.8.0
   record: ^6.1.2
+  just_waveform: ^0.0.7
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.4 # To generate icons - "flutter pub run flutter_launcher_icons"
