--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,8 @@ Runner.ipa
 
 # Fastlane Android
 **/android/.env
+keklist-881d8-3a03518875b0.json
+/android/fastlane/report.xml
 
 # dotenv
 .env
@@ -140,5 +142,3 @@ firebase.json
 
 # FVM Version Cache
 .fvm/
-
-fastlane-play-store.json
