--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   modal_bottom_sheet: ^3.0.0-pre
   package_info_plus: ^9.0.0
   path_provider: ^2.0.12
+  photo_manager: ^3.8.3
+  photo_manager_image_provider: ^2.2.0
+  photo_view: ^0.15.0
   pointycastle: ^3.9.1
   just_audio: ^0.9.40
   rxdart: ^0.28.0
@@ -50,7 +53,9 @@ dependencies:
   syncfusion_flutter_charts: ^31.1.22
   url_launcher: ^6.1.9
   uuid: ^4.2.1
+  video_player: ^2.10.1
   webview_flutter: ^4.1.0
+  wechat_assets_picker: ^10.1.0
   gap: ^3.0.1
   #home_widget: ^0.6.0
   #workmanager: ^0.5.2
